Bug fix on calendar animation for min max, video added for testing (need to customize everything: resize, play, volume, scrollbar)

--- a/assets/css/window.css
+++ b/assets/css/window.css
@@ -3,11 +3,12 @@
     width: fit-content;
     margin: 0 20px;
     margin-bottom: 20px;
+    min-width: 300px;
 }
 
 .window_header {
     position: relative;
-    height: 32px;
+    min-height: 32px;
     min-width: 300px;
     background: var(--color_black);
 }
